[package]
name = "bitsmap-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1", features = ["full"] }
futures-util = "*"
anyhow = "1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio-tungstenite = { version="0.17", features = ["native-tls"]}
url = "2.1.0"
tracing = "*"
tracing-subscriber = "*"
structopt = "0.3"